[package]
name = "runorm"
version = "0.1.0"
edition = "2021"
description = "Sparse PFlog / shifted-CLR normalization for single-cell count data"
license = "BSD-2-Clause"

[lib]
name = "runorm"
path = "src/lib.rs"

[[bin]]
name = "runorm"
path = "src/bin/runorm.rs"
required-features = ["cli"]

[features]
default = []
# Read/write counts and shifted-CLR matrices through the ruanndata container.
ruanndata = ["dep:ruanndata"]
# Command-line binary (implies ruanndata for file I/O).
cli = ["ruanndata", "dep:clap"]
# Optional file backends forwarded to ruanndata (require system libhdf5 for h5ad).
h5ad = ["ruanndata", "ruanndata/h5ad"]
io = ["ruanndata", "ruanndata/io"]

[dependencies]
rayon = "1.10"
thiserror = "2.0"
ruanndata = { git = "https://github.com/pachterlab/ruanndata", default-features = false, optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }

[dev-dependencies]
# Used by the end-to-end normalize -> PCA parity test.
rupca = { git = "https://github.com/pachterlab/rupca" }
# Used by the CLI integration test (build fixtures + temp files).
ruanndata = { git = "https://github.com/pachterlab/ruanndata", default-features = false }
tempfile = "3"
